[gd_scene load_steps=11 format=3 uid="uid://c1cjsqwl3m85g"]

[ext_resource type="Script" path="res://Scripts/Characters/PrototypePlayer.gd" id="1_n4y3h"]
[ext_resource type="Texture2D" uid="uid://ca0mifwptf0hu" path="res://Assets/Characters/AshDown-Sheet.png" id="1_ngmrn"]
[ext_resource type="PackedScene" uid="uid://bqjqy0crkq6sj" path="res://Scenes/flashlight.tscn" id="3_l6e1e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0xby2"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nvjec"]
atlas = ExtResource("1_ngmrn")
region = Rect2(0, 0, 21, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyp6s"]
atlas = ExtResource("1_ngmrn")
region = Rect2(21, 0, 21, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l4yj"]
atlas = ExtResource("1_ngmrn")
region = Rect2(42, 0, 21, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vxn2"]
atlas = ExtResource("1_ngmrn")
region = Rect2(63, 0, 21, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_xuphn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvjec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyp6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l4yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vxn2")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1x02x"]
radius = 171.012

[node name="PrototypePlayer" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_n4y3h")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_0xby2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(2, -19)
sprite_frames = SubResource("SpriteFrames_xuphn")
animation = &"Down"
autoplay = "Down"
frame_progress = 0.408415

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Flashlight" parent="." instance=ExtResource("3_l6e1e")]
position = Vector2(0, -18)

[node name="Area2D" type="Area2D" parent="."]

[node name="FearHitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_1x02x")
debug_color = Color(1, 0, 0, 0.419608)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
